css fixes to give more space to size profile, align borders #107

--- a/app/src/css/components/ProductOptions.scss
+++ b/app/src/css/components/ProductOptions.scss
@@ -1,3 +1,7 @@
+.ProductOptions {
+  border-bottom: 1px solid $c-light-gray;
+}
+
 .ProductOptions__container {
   width: 70%;
   max-width: 450px;
